# csvinfer

./: .gitignore  README.md  pyproject.toml
src/csvinfer/: __init__.py  _api.py  _delimiter.py  _errors.py  _header.py  _parser.py  _quote.py  _types.py
tests/: __init__.py  conftest.py  test_api_surface.py  test_delimiter.py  test_dialect.py  test_header.py  test_infer.py  test_parser.py  test_quote.py
