[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csvinfer"
version = "0.1.0"
description = "Infer CSV dialect (delimiter, quote, header) from raw text without csv.Sniffer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "nripankadas07" }]
keywords = ["csv", "dialect", "sniffer", "delimiter", "header", "inference"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/nripankadas07/csvinfer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
csvinfer = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.mypy]
strict = true
files = ["src/csvinfer"]
